{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 157,
  "lineage": "465f9651-351a-27a8-4bdc-c3fdd8230663",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iProduction_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01231db8966c15acd",
            "arn": "arn:aws:ec2:af-south-1:674925667700:instance/i-02f2ada1ebde0c0ac",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f2ada1ebde0c0ac",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2406:da11:eeb:6001:f1fd:854b:a556:b301"
            ],
            "key_name": "gabon-deployment-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a5649f0acec06f3e",
            "private_dns": "ip-10-0-1-213.af-south-1.compute.internal",
            "private_ip": "10.0.1.213",
            "public_dns": "ec2-13-244-102-177.af-south-1.compute.amazonaws.com",
            "public_ip": "13.244.102.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-0dae771336d13044c",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0914dc19da753d93f",
            "tags": {
              "Environment": "production",
              "Name": "iProduction_1",
              "Terraform": "1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-047d1c009e9e33373"
            ]
          },
          "dependencies": [
            "aws_key_pair.keyGabonDeploymentKey",
            "aws_security_group.sgProductionWebservers",
            "aws_subnet.subnProductionPublic_1a"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iProduction_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01231db8966c15acd",
            "arn": "arn:aws:ec2:af-south-1:674925667700:instance/i-077ebd19cba6f17ef",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077ebd19cba6f17ef",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2406:da11:eeb:6002:d110:204b:1825:b1a1"
            ],
            "key_name": "gabon-deployment-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06cdf511330226943",
            "private_dns": "ip-10-0-2-253.af-south-1.compute.internal",
            "private_ip": "10.0.2.253",
            "public_dns": "ec2-13-244-106-135.af-south-1.compute.amazonaws.com",
            "public_ip": "13.244.106.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-03e775ca4e5fb8740",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075d104d954db5b44",
            "tags": {
              "Environment": "production",
              "Name": "iProduction_2",
              "Terraform": "1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-047d1c009e9e33373"
            ]
          },
          "dependencies": [
            "aws_key_pair.keyGabonDeploymentKey",
            "aws_security_group.sgProductionWebservers",
            "aws_subnet.subnProductionPublic_1b"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iTiles_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01231db8966c15acd",
            "arn": "arn:aws:ec2:af-south-1:674925667700:instance/i-0de532d0a44bc5015",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de532d0a44bc5015",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2406:da11:eeb:6001:690b:eca3:3bb1:441e"
            ],
            "key_name": "gabon-deployment-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d58903ea8a626606",
            "private_dns": "ip-10-0-1-183.af-south-1.compute.internal",
            "private_ip": "10.0.1.183",
            "public_dns": "ec2-13-244-98-190.af-south-1.compute.amazonaws.com",
            "public_ip": "13.244.98.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-06becf2d3f77209b3",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0914dc19da753d93f",
            "tags": {
              "Environment": "production",
              "Name": "iTiles_1",
              "Terraform": "1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-047d1c009e9e33373"
            ]
          },
          "dependencies": [
            "aws_key_pair.keyGabonDeploymentKey",
            "aws_security_group.sgProductionWebservers",
            "aws_subnet.subnProductionPublic_1a"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iTiles_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01231db8966c15acd",
            "arn": "arn:aws:ec2:af-south-1:674925667700:instance/i-0baa0d571bcad0a8e",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0baa0d571bcad0a8e",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2406:da11:eeb:6002:1796:ef0b:9769:9174"
            ],
            "key_name": "gabon-deployment-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-012b6823430a1d7ba",
            "private_dns": "ip-10-0-2-206.af-south-1.compute.internal",
            "private_ip": "10.0.2.206",
            "public_dns": "ec2-13-244-141-189.af-south-1.compute.amazonaws.com",
            "public_ip": "13.244.141.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-09cb95e5ece7c3a95",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075d104d954db5b44",
            "tags": {
              "Environment": "production",
              "Name": "iTiles_2",
              "Terraform": "1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-047d1c009e9e33373"
            ]
          },
          "dependencies": [
            "aws_key_pair.keyGabonDeploymentKey",
            "aws_security_group.sgProductionWebservers",
            "aws_subnet.subnProductionPublic_1b"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwProduction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:674925667700:internet-gateway/igw-04ed57f33ee83af2e",
            "id": "igw-04ed57f33ee83af2e",
            "owner_id": "674925667700",
            "tags": {
              "Environment": "production",
              "Name": "igwProduction",
              "Terraform": "1"
            },
            "vpc_id": "vpc-0ddae33e1803bf44b"
          },
          "dependencies": [
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "albProductionFrontEnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:loadbalancer/app/albProductionFrontEnd/f0315ab9e8a6c229",
            "arn_suffix": "app/albProductionFrontEnd/f0315ab9e8a6c229",
            "dns_name": "albProductionFrontEnd-712214207.af-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:af-south-1:674925667700:loadbalancer/app/albProductionFrontEnd/f0315ab9e8a6c229",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "dualstack",
            "load_balancer_type": "application",
            "name": "albProductionFrontEnd",
            "security_groups": [
              "sg-047d1c009e9e33373"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-075d104d954db5b44"
              },
              {
                "subnet_id": "subnet-0914dc19da753d93f"
              }
            ],
            "subnets": [
              "subnet-075d104d954db5b44",
              "subnet-0914dc19da753d93f"
            ],
            "tags": {
              "Environment": "production",
              "Terraform": "1"
            },
            "vpc_id": "vpc-0ddae33e1803bf44b",
            "zone_id": "Z268VQBMOI5EKX"
          },
          "dependencies": [
            "aws_security_group.sgProductionWebservers",
            "aws_subnet.subnProductionPublic_1a",
            "aws_subnet.subnProductionPublic_1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alblProductionHttps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:listener/app/albProductionFrontEnd/f0315ab9e8a6c229/aa6c27cde020872c",
            "certificate_arn": "arn:aws:acm:af-south-1:674925667700:certificate/ed966fe8-56b1-4f2a-b558-d62a4ae754b8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionGabonHttp/624505614fda907f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:674925667700:listener/app/albProductionFrontEnd/f0315ab9e8a6c229/aa6c27cde020872c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:loadbalancer/app/albProductionFrontEnd/f0315ab9e8a6c229",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_acm_certificate.certGabonHttps",
            "aws_lb.albProductionFrontEnd",
            "aws_lb_target_group.lbtgProductionGabonHttp",
            "aws_security_group.sgProductionWebservers",
            "aws_subnet.subnProductionPublic_1a",
            "aws_subnet.subnProductionPublic_1b",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alblrProductionGabonGlobalOriginOrg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionGabonHttp/624505614fda907f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:listener-rule/app/albProductionFrontEnd/f0315ab9e8a6c229/aa6c27cde020872c/01347f46b473bb41",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "gabon.globalorigin.org"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:674925667700:listener-rule/app/albProductionFrontEnd/f0315ab9e8a6c229/aa6c27cde020872c/01347f46b473bb41",
            "listener_arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:listener/app/albProductionFrontEnd/f0315ab9e8a6c229/aa6c27cde020872c",
            "priority": 100
          },
          "dependencies": [
            "aws_acm_certificate.certGabonHttps",
            "aws_lb.albProductionFrontEnd",
            "aws_lb_listener.alblProductionHttps",
            "aws_lb_target_group.lbtgProductionGabonHttp",
            "aws_security_group.sgProductionWebservers",
            "aws_subnet.subnProductionPublic_1a",
            "aws_subnet.subnProductionPublic_1b",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alblrProductionTilesGlobalOriginOrg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionTilesHttp/89102ddee2c70e66",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:listener-rule/app/albProductionFrontEnd/f0315ab9e8a6c229/aa6c27cde020872c/f3930bdc1e6f8796",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tiles.globalorigin.org"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:674925667700:listener-rule/app/albProductionFrontEnd/f0315ab9e8a6c229/aa6c27cde020872c/f3930bdc1e6f8796",
            "listener_arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:listener/app/albProductionFrontEnd/f0315ab9e8a6c229/aa6c27cde020872c",
            "priority": 200
          },
          "dependencies": [
            "aws_lb_listener.alblProductionHttps",
            "aws_lb_target_group.lbtgProductionTilesHttp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lbtgProductionGabonHttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionGabonHttp/624505614fda907f",
            "arn_suffix": "targetgroup/lbtgProductionGabonHttp/624505614fda907f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionGabonHttp/624505614fda907f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lbtgProductionGabonHttp",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ddae33e1803bf44b"
          },
          "dependencies": [
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lbtgProductionTilesHttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionTilesHttp/89102ddee2c70e66",
            "arn_suffix": "targetgroup/lbtgProductionTilesHttp/89102ddee2c70e66",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionTilesHttp/89102ddee2c70e66",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lbtgProductionTilesHttp",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ddae33e1803bf44b"
          },
          "dependencies": [
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lbtgaGabonProdInstance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionGabonHttp/624505614fda907f-20201123135400355200000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionGabonHttp/624505614fda907f",
            "target_id": "i-02f2ada1ebde0c0ac"
          },
          "dependencies": [
            "aws_instance.iProduction_1",
            "aws_key_pair.keyGabonDeploymentKey",
            "aws_lb_target_group.lbtgProductionGabonHttp",
            "aws_security_group.sgProductionWebservers",
            "aws_subnet.subnProductionPublic_1a",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lbtgaGabonProdInstance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionGabonHttp/624505614fda907f-20201123135400434600000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionGabonHttp/624505614fda907f",
            "target_id": "i-077ebd19cba6f17ef"
          },
          "dependencies": [
            "aws_instance.iProduction_2",
            "aws_key_pair.keyGabonDeploymentKey",
            "aws_lb_target_group.lbtgProductionGabonHttp",
            "aws_security_group.sgProductionWebservers",
            "aws_subnet.subnProductionPublic_1b",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lbtgaTilesInstance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionTilesHttp/89102ddee2c70e66-20210105144033352600000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionTilesHttp/89102ddee2c70e66",
            "target_id": "i-0de532d0a44bc5015"
          },
          "dependencies": [
            "aws_instance.iTiles_1",
            "aws_key_pair.keyGabonDeploymentKey",
            "aws_lb_target_group.lbtgProductionTilesHttp",
            "aws_security_group.sgProductionWebservers",
            "aws_subnet.subnProductionPublic_1a",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lbtgaTilesInstance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionTilesHttp/89102ddee2c70e66-20210105144033374300000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:674925667700:targetgroup/lbtgProductionTilesHttp/89102ddee2c70e66",
            "target_id": "i-0baa0d571bcad0a8e"
          },
          "dependencies": [
            "aws_instance.iTiles_2",
            "aws_key_pair.keyGabonDeploymentKey",
            "aws_lb_target_group.lbtgProductionTilesHttp",
            "aws_security_group.sgProductionWebservers",
            "aws_subnet.subnProductionPublic_1b",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtProductionDefault",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-032847b440988b6d8",
            "owner_id": "674925667700",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ed57f33ee83af2e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "rtProductionDefault",
              "Terraform": "1"
            },
            "vpc_id": "vpc-0ddae33e1803bf44b"
          },
          "dependencies": [
            "aws_internet_gateway.igwProduction",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-production-public_1a-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0085760c074f186b3",
            "route_table_id": "rtb-032847b440988b6d8",
            "subnet_id": "subnet-0914dc19da753d93f"
          },
          "dependencies": [
            "aws_internet_gateway.igwProduction",
            "aws_route_table.rtProductionDefault",
            "aws_subnet.subnProductionPublic_1a",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-production-public_1b-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ed9a67c22299620",
            "route_table_id": "rtb-032847b440988b6d8",
            "subnet_id": "subnet-075d104d954db5b44"
          },
          "dependencies": [
            "aws_internet_gateway.igwProduction",
            "aws_route_table.rtProductionDefault",
            "aws_subnet.subnProductionPublic_1b",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgProductionDatabases",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:674925667700:security-group/sg-0ab18d36cee7c373f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ab18d36cee7c373f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sgProductionDatabases",
            "name_prefix": "",
            "owner_id": "674925667700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "sgProductionDatabases",
              "Terraform": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddae33e1803bf44b"
          },
          "dependencies": [
            "aws_vpc.vpcGabonProduction"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgProductionWebservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:674925667700:security-group/sg-047d1c009e9e33373",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047d1c009e9e33373",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "188.26.85.74/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "188.27.115.49/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "86.120.195.191/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "86.123.221.249/32",
                  "173.79.4.69/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sgProductionWebservers",
            "name_prefix": "",
            "owner_id": "674925667700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "sgProductionWebservers",
              "Terraform": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddae33e1803bf44b"
          },
          "dependencies": [
            "aws_vpc.vpcGabonProduction"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgWebFEElastiCache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:674925667700:security-group/sg-0263ae24eea3d715f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0263ae24eea3d715f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "sgWebFEElastiCache",
            "name_prefix": "",
            "owner_id": "674925667700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "sgWebFEElastiCache",
              "Terraform": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddae33e1803bf44b"
          },
          "dependencies": [
            "aws_vpc.vpcGabonProduction"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgrProductionHttpToWebServersFromEverywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-923329998",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047d1c009e9e33373",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.sgProductionWebservers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgrProductionHttpsToWebServersFromEverywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-591051213",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047d1c009e9e33373",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.sgProductionWebservers",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgrProductionOutboundFromWebServersToEverywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3848230781",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-047d1c009e9e33373",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.sgProductionWebservers",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgrProductionPostgresAccessibleFromWebFEs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "",
            "from_port": 5432,
            "id": "sgrule-2719464262",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ab18d36cee7c373f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.sgProductionDatabases",
            "aws_subnet.subnProductionPublic_1a",
            "aws_subnet.subnProductionPublic_1b",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgrProductionSshToWebServersFromSecuredOrigins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "173.79.4.69/32",
              "86.123.221.249/32",
              "188.27.115.49/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1564321935",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047d1c009e9e33373",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.sgProductionWebservers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgrWebFEtoElastiCache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "",
            "from_port": 6379,
            "id": "sgrule-676599960",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0263ae24eea3d715f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "dependencies": [
            "aws_elasticache_cluster.cacheGabonWebFE",
            "aws_security_group.sgWebFEElastiCache",
            "aws_subnet.subnProductionPublic_1a",
            "aws_subnet.subnProductionPublic_1b",
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnProductionPublic_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:674925667700:subnet/subnet-0914dc19da753d93f",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0914dc19da753d93f",
            "ipv6_cidr_block": "2406:da11:eeb:6001::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-08bab5976d0b38c2b",
            "map_public_ip_on_launch": true,
            "owner_id": "674925667700",
            "tags": {
              "Environment": "production",
              "Name": "subnProductionPublic_1a",
              "Terraform": "1"
            },
            "vpc_id": "vpc-0ddae33e1803bf44b"
          },
          "dependencies": [
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnProductionPublic_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:674925667700:subnet/subnet-075d104d954db5b44",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-075d104d954db5b44",
            "ipv6_cidr_block": "2406:da11:eeb:6002::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-076eaf502b0ffcc82",
            "map_public_ip_on_launch": true,
            "owner_id": "674925667700",
            "tags": {
              "Environment": "production",
              "Name": "subnProductionPublic_1b",
              "Terraform": "1"
            },
            "vpc_id": "vpc-0ddae33e1803bf44b"
          },
          "dependencies": [
            "aws_vpc.vpcGabonProduction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcGabonProduction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:674925667700:vpc/vpc-0ddae33e1803bf44b",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6598483f3f91f71",
            "default_route_table_id": "rtb-0a2a857197814e546",
            "default_security_group_id": "sg-0c09c611424188729",
            "dhcp_options_id": "dopt-d26382bb",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ddae33e1803bf44b",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0a78827a032ae6234",
            "ipv6_cidr_block": "2406:da11:eeb:6000::/56",
            "main_route_table_id": "rtb-0a2a857197814e546",
            "owner_id": "674925667700",
            "tags": {
              "Environment": "production",
              "Name": "vpcGabonProduction",
              "Terraform": "1"
            }
          }
        }
      ]
    }
  ]
}